syntax = "proto3";

package ibc.applications.transfer.v2;

option go_package = "github.com/cosmos/ibc-go/v8/modules/apps/transfer/types";

import "gogoproto/gogo.proto";

// FungibleTokenPacketData defines a struct for the packet payload
// See FungibleTokenPacketData spec:
// https://github.com/cosmos/ibc/tree/master/spec/app/ics-020-fungible-token-transfer#data-structures
message FungibleTokenPacketData {
  // the token denomination to be transferred
  string denom = 1;
  // the token amount to be transferred
  string amount = 2;
  // the sender address
  string sender = 3;
  // the recipient address on the destination chain
  string receiver = 4;
  // optional memo
  string memo = 5;
}

// FungibleTokenPacketDataV2 defines a struct for the packet payload
// See FungibleTokenPacketDataV2 spec:
// https://github.com/cosmos/ibc/tree/master/spec/app/ics-020-fungible-token-transfer#data-structures
message FungibleTokenPacketDataV2 {
  // the tokens to be transferred
  repeated Token tokens = 1 [(gogoproto.nullable) = false];
  // the sender address
  string sender = 2;
  // the recipient address on the destination chain
  string receiver = 3;
  // optional memo
  string memo = 4;
}

// Token defines a struct which represents a token to be transferred.
message Token {
  // the base token denomination to be transferred
  string denom = 1;
  // the token amount to be transferred
  string amount = 2;
  // the trace of the token
  repeated Trace trace = 3 [(gogoproto.nullable) = false];
}

// Trace defines portID and channelID the token arrived through
message Trace {
  option (gogoproto.goproto_stringer) = false;
  string port_id                      = 1;
  string channel_id                   = 2;
}
